2009-10-05  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/LoadedTest.cs: Add a bunch of extra tests for
	  the Loaded event. r: spouliot

	* System.Windows.Media/VisualTreeHelperTest.cs: Move two
	  Loaded tests to the LoadedTest.cs file. r: spouliot

2009-10-01  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows.Input/InputMethodTest.cs: Remove [MoonlightBug]
	on existing test and add new test cases

2009-10-01  Sebastien Pouliot  <sebastien@ximian.com> 

	* System.Windows.Interop/SilverlightHostTest.cs: Remove 
	[MoonlightBug] on IsVersionSupported

	r: alan

2009-09-30  Sebastien Pouliot  <sebastien@ximian.com> 

	* security/SecuritySafeCriticalTest.cs: New. Unit tests

	r: jackson

2009-09-30  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows.Browser/HtmlPageTest.cs: New. Unit tests

	r: rolf

2009-09-30  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Input/InputMethodTest.cs:
	  IsInputMethodEnabled defaults to true and also needs a
	  validator to ensure that it's only set on 

2009-09-29  Chris Toshok  <toshok@ximian.com>

	* System.Windows.Automation.Peers/TextBoxAutomationPeerTest.cs (ValueProvider_Events):
	call EnqueueTestComplete if we're returning early so we don't
	block indefinitely and timeout moon-unit.

	r: andreia

2009-09-29  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows.Browser/HtmlObjectTest.cs: New. Unit tests

	r: toshok

2009-09-29  Mario Carrion  <mcarrion@novell.com>

	* System.Windows.Automation.Peers/TextBoxAutomationPeerTest.cs: 
	New test ValueProvider_Events.

	r: jeff

2009-09-29  Mario Carrion  <mcarrion@novell.com>

	* moon-unit.csproj: File added SWAP.PasswordBoxAutomationPeerTest.cs.
	* System.Windows.Automation.Peers/PasswordBoxAutomationPeerTest.cs: 
	New file, tests PasswordBoxAutomationPeer.

	r: spouliot

2009-09-28  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls.Primitives/SelectorTest.cs: